# fastapi-efficient-sql

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: fastapi-efficient-sql.postman_collection.json
examples/service/: __init__.py  __main__.py  main.py
examples/service/constants/: enums.py
examples/service/managers/demo/: account.py
examples/service/models/demo/: account.py  demo_meta.py
examples/service/routers/: __init__.py  account.py  basic.py
examples/service/scripts/: demo.py
fastapi_esql/: __init__.py
fastapi_esql/const/: __init__.py  error.py
fastapi_esql/orm/: __init__.py  base_app.py  base_manager.py  base_model.py
fastapi_esql/utils/: __init__.py  converter.py  cursor_handler.py  decorator.py  metaclass.py  sql.py  sqlizer.py
tests/: __init__.py  test_converter.py  test_cursor_handler.py  test_decorator.py  test_metaclass.py  test_orm.py  test_sqlizer.py
