[tool.poetry]
name = "fastapi-efficient-sql"
version = "0.0.12"
description = "Generate bulk DML SQL and execute them based on Tortoise ORM and mysql8.0+, and integrated with FastAPI."
authors = ["BryanLee <bryanlee@126.com>"]
keywords = ["sql", "fastapi", "tortoise-orm", "mysql8", "bulk-operation"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/NightMarcher/fastapi-efficient-sql"
packages = [{include = "fastapi_esql"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
]

[tool.poetry.dependencies]
python = "^3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
